# QMLMediaPlayerUnsupportedVideoFilesDemo

./: CMakeLists.txt  Main.qml  main.cpp  resources.qrc
